--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=vebproject
 spring.jpa.open-in-view=false
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://junction.proxy.rlwy.net:40826/railway
 spring.datasource.username=postgres
-spring.datasource.password=vika
+spring.datasource.password=dqJwYUpaOQTwcSDEUaFRbSGwFgAPYLOA
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret=jklhsdfhjklasdfvlhujkfgdsuhijp8794q-3ur6708q34
